# pgwasm

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.cursor/cloud-agent-prompts/: README.md
.cursor/cloud-agent-prompts/wave-6/: README.md  build-features.md
.cursor/plans/: pg_wasm_extension_implementation_a5954df4.plan.md  pg_wasm_extension_implementation_v2.plan.md  schema_and_guc_rename_7e70e541.plan.md
.cursor/rules/: dependency-api-docs.mdc  pg-wasm-pgrx-testing.mdc  pgrx-testing.mdc  rust-coding-standards.mdc
.github/actions/install-wasm/: action.yml
.github/actions/install-wasm-tools/: action.yml
.github/actions/setup-pgrx-pg17/: action.yml
.github/workflows/: ci.yml
docs/: architecture.md  guc.md  wit-mapping.md
pg_wasm/: .gitignore  Cargo.toml  build.rs  pg_wasm.control
pg_wasm/fixtures/: test_add.wat  test_echo_mem.wat  test_hooks.wat  test_wasi_fd_write.wat
pg_wasm/sql/: pg_wasm--0.1.0--0.1.1.sql  pg_wasm--0.1.0.sql
pg_wasm/src/: abi.rs  artifacts.rs  catalog.rs  composite_layout.rs  config.rs  errors.rs  guc.rs  hooks.rs  lib.rs  load.rs  mapping.rs  metrics.rs  policy.rs  proc_reg.rs  registry.rs  runtime.rs  shmem.rs  track_b_component_types.rs  trampoline.rs  views.rs
pg_wasm/src/lifecycle/: load.rs  mod.rs  reconfigure.rs  reload.rs  unload.rs
pg_wasm/src/mapping/: composite.rs  mod.rs  scalars.rs
pg_wasm/src/runtime/: component.rs  component_marshal.rs  composite_marshal.rs  core.rs  dispatch.rs  engine.rs  extism_backend.rs  host.rs  host_stub.rs  mod.rs  pool.rs  selection.rs  stub.rs  wasm_bytes_exports.rs  wasmer_backend.rs  wasmtime_backend.rs
pg_wasm/src/wit/: mod.rs  typing.rs  udt.rs  world.rs
pg_wasm/test_guests/log_guest/: Cargo.toml
pg_wasm/test_guests/log_guest/src/: lib.rs
pg_wasm/test_guests/query_guest/: Cargo.toml
pg_wasm/test_guests/query_guest/wit/: guest.wit
pg_wasm/testdata/: on_unload_trap.wasm
pg_wasm/tests/guests/log_guest/wit/: guest.wit
pg_wasm/tests/guests/query_guest/src/: lib.rs
pg_wasm/tests/guests/write_query_guest/src/: lib.rs
pg_wasm/tests/guests/write_query_guest/wit/: guest.wit
pg_wasm/tests/pg_regress/expected/: core_scalar.out  errors.out  load.out  reload.out  setup.out  views.out
pg_wasm/tests/pg_regress/sql/: core_scalar.sql  errors.sql  load.sql  reload.sql  setup.sql  views.sql
pg_wasm/wit/: host.wit
pg_wasm_macos_test_stub/: Cargo.toml  build.rs  stub.c
pg_wasm_macos_test_stub/src/: lib.rs
pgwasm/: .gitignore  Cargo.toml  build.rs  pgwasm.control
pgwasm/fixtures/components/: README.md  generate_pg_regress_sql.py
pgwasm/fixtures/components/arith/: Cargo.toml  world.wit
pgwasm/fixtures/components/enums/: Cargo.toml  README.md  component.wasm
pgwasm/fixtures/components/enums/src/: lib.rs
pgwasm/fixtures/components/hooks/: Cargo.toml
pgwasm/fixtures/components/policy_probe/: README.md
pgwasm/fixtures/components/records/: component.wasm
pgwasm/fixtures/components/resources/: component.wasm
pgwasm/fixtures/components/resources/src/: lib.rs
pgwasm/fixtures/components/strings/: Cargo.toml
pgwasm/fixtures/components/trap/: README.md  component.wasm
pgwasm/fixtures/components/variants/: Cargo.toml
pgwasm/fixtures/components/wit_roundtrip/: README.md  world.wit
pgwasm/sql/: pgwasm--0.1.0.sql
pgwasm/src/: artifacts.rs  catalog.rs  config.rs  errors.rs  guc.rs  hooks.rs  lib.rs  proc_reg.rs  registry.rs  shmem.rs  trampoline.rs  views.rs
pgwasm/src/lifecycle/: load.rs  mod.rs  reconfigure.rs  reload.rs  unload.rs
pgwasm/src/mapping/: composite.rs  list.rs  scalars.rs
pgwasm/src/runtime/: component.rs  core.rs  engine.rs  host.rs  mod.rs  pool.rs
pgwasm/src/wit/: typing.rs  udt.rs
pgwasm/tests/data/: on_load_err.wasm
pgwasm/tests/fixtures/components/: README.md  build_all.sh  generate_pg_regress_sql.py
pgwasm/tests/fixtures/components/arith/: README.md  component.wasm
pgwasm/tests/fixtures/components/enums/: world.wit
pgwasm/tests/fixtures/components/hooks/: README.md  component.wasm  world.wit
pgwasm/tests/fixtures/components/policy_probe/: Cargo.toml  component.wasm  world.wit
pgwasm/tests/fixtures/components/records/: Cargo.toml  README.md  world.wit
pgwasm/tests/fixtures/components/resources/: Cargo.toml  README.md  world.wit
pgwasm/tests/fixtures/components/strings/: README.md  component.wasm  world.wit
pgwasm/tests/fixtures/components/trap/: Cargo.toml  world.wit
pgwasm/tests/fixtures/components/variants/: README.md  component.wasm  world.wit
pgwasm/tests/fixtures/components/wit_roundtrip/: Cargo.toml  component.wasm
pgwasm/tests/fixtures/core/: README.md  add_i32.wat  echo_mem.wat
pgwasm/tests/guests/log_guest/: Cargo.toml
pgwasm/tests/guests/log_guest/src/: lib.rs
pgwasm/tests/guests/log_guest/wit/: guest.wit
pgwasm/tests/guests/query_guest/src/: lib.rs
pgwasm/tests/guests/query_guest/wit/: guest.wit
pgwasm/tests/guests/write_query_guest/: Cargo.toml
pgwasm/tests/guests/write_query_guest/src/: lib.rs
pgwasm/tests/pg_regress/expected/: core_scalar.out  error_classes.out  errors.out  lifecycle.out  load.out  metrics.out  policy_narrow.out  reload.out  setup.out  views.out  wit_mapping.out
pgwasm/tests/pg_regress/sql/: core_scalar.sql  error_classes.sql  errors.sql  lifecycle.sql  load.sql  metrics.sql  policy_narrow.sql  reload.sql  setup.sql  views.sql  wit_mapping.sql
pgwasm/wit/: host.wit
tests/: README.md  build.rs
tests/http_search_guest/: Cargo.toml
tests/http_search_guest/src/: lib.rs
tests/http_search_guest/wit/: http-search.wit
tests/src/: backend_restart.rs  concurrent_generation.rs  fuel_exhaustion.rs  lib.rs  memory_pages.rs  query_cancellation.rs  wasi_http_search.rs  wasi_policy_denial.rs
tests/src/common/: mod.rs
(+9 files in other folders)
