[workspace]
resolver = "3"
members = [
    "pg_wasm",
    "tests",
    "tests/http_search_guest",
]

[workspace.package]
authors = ["Jarred Nicholls <jarred.nicholls@gmail.com>"]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
libc = "0.2"
pgrx = "0.18"
pgrx-tests = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tempfile = "3"
thiserror = "2"
wasmparser = "0.247"
wasmtime = { version = "44", features = ["component-model"] }
wasmtime-wasi = "44"
wasmtime-wasi-http = "44"
wat = "1"
wit-component = "0.247"
wit-parser = "0.247"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
