[package]
name = "pg_wasm"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_wasm"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg13", "runtime-wasmtime"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg-test = []
runtime-wasmer = ["dep:wasmer"]
runtime-wasmtime = ["dep:wasmtime", "dep:wasmtime-wasi"]
runtime-extism = ["dep:extism"]

[dependencies]
anyhow.workspace = true
extism = { workspace = true, optional = true }
pgrx.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wasmer = { workspace = true, optional = true }
wasmparser.workspace = true
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }

[build-dependencies]
wat.workspace = true

[dev-dependencies]
pgrx-tests.workspace = true
wat.workspace = true
